Changed some more spacing issues on index.html

--- a/css/home.style.css
+++ b/css/home.style.css
@@ -152,6 +152,7 @@ header a:hover{
 
 .text {
   color: #000;
+  width: 80%;
   font-size: 1.5rem;
   position: absolute;
   top: 45%;
@@ -237,6 +238,7 @@ header a:hover{
 }
 .Equipment h1{
   margin: 2%;
+  margin-top: 6%;
   padding-top: 1.5rem;
   font-size: 4rem;
   text-decoration: underline;
@@ -417,6 +419,13 @@ hr{
   header ul{
     top: 1.50rem;
   }
+  .text{
+    font-size: 2rem;
+    width: 90%;
+  }
+  .location-container h1{
+    font-size: 5rem;
+  }
 }
 
 @media (min-width: 93.75rem){/*1500px*/
@@ -444,9 +453,17 @@ hr{
     font-size: 1.5rem;
   }
   .location-container p{
-    font-size: 1.5rem;
+    font-size: 2rem;
+    line-height: 2rem;
     width: 70%;
   }
+  h1.subheading{
+    font-size: 6rem;
+  }
+  hr{
+    width: 30%;
+  }
+
 }
 
 @media (min-width: 101.1875rem){/*1619px*/
